Firework example using Particles
Firework simulation added, it has a Firework class which has a Rule struct that mandates how the firework and it children should behave

--- a/Fireworks/Fireworks.vcxproj.filters
+++ b/Fireworks/Fireworks.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="include\Firework.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="include\Utils.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
