Force generators added
Force generators are force generated in the game world that can be applied to any particle by linking them in a registry, gravity and drag generators where added

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+# Ignore exercises
+[Ee]xercise[0-9]-[0-9]/
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
