--- a/NebulaPhysicsEngine/NebulaPhysicsEngine.vcxproj
+++ b/NebulaPhysicsEngine/NebulaPhysicsEngine.vcxproj
@@ -73,18 +73,22 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
+    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\NebulaPhysicsEngine\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
+    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\NebulaPhysicsEngine\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
+    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\NebulaPhysicsEngine\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
+    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\NebulaPhysicsEngine\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -156,7 +160,16 @@
     <ClCompile Include="include\Presicion.ixx" />
     <ClCompile Include="include\Vector3.ixx" />
     <ClCompile Include="src\Particle.cpp" />
+    <ClCompile Include="src\ParticleDrag.cpp" />
+    <ClCompile Include="src\ParticleForceRegistry.cpp" />
+    <ClCompile Include="src\ParticleGravity.cpp" />
     <ClCompile Include="src\Vector3.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="include\IParticleForceGenerator.h" />
+    <ClInclude Include="include\ParticleDrag.h" />
+    <ClInclude Include="include\ParticleForceRegistry.h" />
+    <ClInclude Include="include\ParticleGravity.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
