ParticleSpring force generator
This generator creates a spring force in a particle, treating it as one end of the spring, the other end is the particle provided in the force generator constructor

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@
 
 # Ignore exercises
 [Ee]xercise[0-9]-[0-9]/
+Excercise5-4
+Testing
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
