--- a/NebulaPhysicsEngine/NebulaPhysicsEngine.vcxproj.filters
+++ b/NebulaPhysicsEngine/NebulaPhysicsEngine.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\ParticleDrag.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="src\ParticleSpring.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\IParticleForceGenerator.h">
@@ -54,6 +57,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="include\ParticleDrag.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ParticleSpring.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
