Simulacion de resortes agregada
Se pueden simular 4 tipos de resortes, ParticleSpring usa la ley de hooke para calcular la fuerza de extension y compresion y usa una particula como el lado del generador, ParticleAnchoredSpring es lo mismo solo que usa un Vector3 en lugar de una particula, ParticleBungee solo aplica fuerza cuando hay extension, y ParticleBuoyancy simula la flotabilidad de un objeto

--- a/NebulaPhysicsEngine/NebulaPhysicsEngine.vcxproj.filters
+++ b/NebulaPhysicsEngine/NebulaPhysicsEngine.vcxproj.filters
@@ -45,6 +45,15 @@
     <ClCompile Include="src\ParticleSpring.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="src\ParticleAnchoredSpring.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ParticleBungee.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="src\ParticleBuoyancy.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\IParticleForceGenerator.h">
@@ -60,6 +69,15 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="include\ParticleSpring.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ParticleAnchoredSpring.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ParticleBungee.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="include\ParticleBuoyancy.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
