Migration from modules to file headers
At the beginning the project was being implemented using C++ Modules, since there have been compilations errors when trying to use the standard library the project was migrated to a more reliable approach, it may be migrated to modules in the future, once it is fully supported by most compilers

--- a/Fireworks/Fireworks.vcxproj
+++ b/Fireworks/Fireworks.vcxproj
@@ -89,7 +89,7 @@
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
     <LibraryPath>$(SolutionDir)\External\lib;$(LibraryPath)</LibraryPath>
-    <IncludePath>$(SolutionDir)\External\include;$(SolutionDir)\OpenGLRendering\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\External\include;$(SolutionDir)\OpenGLRendering\include;$(SolutionDir)\NebulaPhysicsEngine\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
