--- a/ParticleSprings/ParticleSprings.vcxproj.filters
+++ b/ParticleSprings/ParticleSprings.vcxproj.filters
@@ -13,15 +13,24 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="CommonFiles">
+      <UniqueIdentifier>{400a8e00-43c0-497f-a6d2-958e815df678}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\Main.cpp">
+    <ClCompile Include="..\BaseApplication\Application.cpp">
+      <Filter>CommonFiles</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BaseApplication\Main.cpp">
+      <Filter>CommonFiles</Filter>
+    </ClCompile>
+    <ClCompile Include="SpringDemo.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\Application.h">
-      <Filter>Archivos de encabezado</Filter>
+    <ClInclude Include="..\BaseApplication\Application.h">
+      <Filter>CommonFiles</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
