--- a/External/External.vcxproj
+++ b/External/External.vcxproj
@@ -73,14 +73,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\External\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\CodePlayground\C++\NebulaPhysicsEngine\External\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\External\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\CodePlayground\C++\NebulaPhysicsEngine\External\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
@@ -91,8 +91,8 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\External\include;$(IncludePath)</IncludePath>
-    <LibraryPath>E:\CodePlayground\C++\NebulaPhysicsEngine\External\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(ProjectDir)\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(ProjectDir)\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
