--- a/NebulaPhysicsEngine/NebulaPhysicsEngine.vcxproj
+++ b/NebulaPhysicsEngine/NebulaPhysicsEngine.vcxproj
@@ -73,22 +73,22 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\NebulaPhysicsEngine\include;$(IncludePath)</IncludePath>
+    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\NebulaPhysicsEngine\include;$(IncludePath);$(ProjectDir)\include</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\NebulaPhysicsEngine\include;$(IncludePath)</IncludePath>
+    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\NebulaPhysicsEngine\include;$(IncludePath);$(ProjectDir)\include</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>$(ProjectDir)\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(ProjectDir)\include;$(IncludePath);$(ProjectDir)\include</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\NebulaPhysicsEngine\include;$(IncludePath)</IncludePath>
+    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\NebulaPhysicsEngine\include;$(IncludePath);$(ProjectDir)\include</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
