--- a/OpenGLRendering/OpenGLRendering.vcxproj
+++ b/OpenGLRendering/OpenGLRendering.vcxproj
@@ -73,22 +73,26 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\OpenGLRendering\include;E:\CodePlayground\C++\NebulaPhysicsEngine\External\include;$(IncludePath)</IncludePath>
+    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\OpenGLRendering\include;E:\CodePlayground\C++\NebulaPhysicsEngine\External\include;$(IncludePath);$(SolutionDir)\External\include;$(ProjectDir)\include;$(SolutionDir)\NebulaPhysicsEngine\include</IncludePath>
+    <LibraryPath>$(SolutionDir)\External\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\OpenGLRendering\include;E:\CodePlayground\C++\NebulaPhysicsEngine\External\include;$(IncludePath)</IncludePath>
+    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\OpenGLRendering\include;E:\CodePlayground\C++\NebulaPhysicsEngine\External\include;$(IncludePath);$(SolutionDir)\External\include;$(ProjectDir)\include;$(SolutionDir)\NebulaPhysicsEngine\include</IncludePath>
+    <LibraryPath>$(SolutionDir)\External\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>$(SolutionDir)\External\include;$(ProjectDir)\include;$(SolutionDir)\NebulaPhysicsEngine\include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)\External\include;$(ProjectDir)\include;$(SolutionDir)\NebulaPhysicsEngine\include;$(IncludePath);$(SolutionDir)\External\include;$(ProjectDir)\include;$(SolutionDir)\NebulaPhysicsEngine\include</IncludePath>
+    <LibraryPath>$(SolutionDir)\External\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)bin\$(ProjectName)\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)intermidiate\$(ProjectName)\$(Platform)\$(Configuration)\</IntDir>
-    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\OpenGLRendering\include;E:\CodePlayground\C++\NebulaPhysicsEngine\External\include;$(IncludePath)</IncludePath>
+    <IncludePath>E:\CodePlayground\C++\NebulaPhysicsEngine\OpenGLRendering\include;E:\CodePlayground\C++\NebulaPhysicsEngine\External\include;$(IncludePath);$(SolutionDir)\External\include;$(ProjectDir)\include;$(SolutionDir)\NebulaPhysicsEngine\include</IncludePath>
+    <LibraryPath>$(SolutionDir)\External\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
